# gmcl_libremidi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/gmcl_libremidi/: common.hpp
include/gmcl_libremidi/libraries/: libremidi.hpp
src/: main.cpp
src/libraries/: libremidi.cpp
